@@ -74,6 +74,7 @@ import org.sakaiproject.component.cover.ComponentManager;
 import org.sakaiproject.component.cover.ServerConfigurationService;
 import org.sakaiproject.db.api.SqlService;
 import org.sakaiproject.exception.IdUnusedException;
+import org.sakaiproject.exception.PermissionException;
 import org.sakaiproject.lti.api.LTIService;
 import org.sakaiproject.lti13.LineItemUtil;
 
@@ -466,10 +467,14 @@ public class LTI13Servlet extends HttpServlet {
 
 				out.println(((JSONObject) js).toJSONString());
 			} catch (Exception e) {
-				response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+				log.error("Error in proxy request", e);
+				LTI13Util.return400(response, "Proxy request failed");
+				return;
 			}
 		} catch (Exception e) {
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error in proxy request", e);
+			LTI13Util.return400(response, "Proxy request failed");
+			return;
 		}
 	}
 
@@ -488,7 +493,7 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		Map<String, Object> content = loadContentCheckSignature(signed_placement, response);
+		org.sakaiproject.lti.beans.LtiContentBean content = loadContentCheckSignature(signed_placement, response);
 		if (content == null) {
 			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
 			return;
@@ -500,14 +505,14 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		Long toolKey = LTIUtil.toLongKey(content.get(LTIService.LTI_TOOL_ID));
+		Long toolKey = LTIUtil.toLongKey(content.toolId);
 		if (toolKey < 0 ) {
-			log.error("Content / Tool invalid content={} tool={}", content.get(LTIService.LTI_ID), toolKey);
+			log.error("Content / Tool invalid content={} tool={}", content.id, toolKey);
 			LTI13Util.return400(response, "Content / Tool mismatch");
 			return;
 		}
 
-		Map<String, Object> tool = ltiService.getToolDao(toolKey, site.getId());
+		org.sakaiproject.lti.beans.LtiToolBean tool = ltiService.getToolDaoAsBean(toolKey, site.getId(), true);
 		if (tool == null) {
 			log.error("Could not load tool={}", toolKey);
 			LTI13Util.return400(response, "Missing tool");
@@ -523,7 +528,7 @@ public class LTI13Servlet extends HttpServlet {
 		String context_id = site.getId();
 
 		String user_id = sess.getUserId();
-		String subject = SakaiLTIUtil.getSubject(user_id, context_id);
+		String subject = SakaiLTIUtil.getSubject(user_id);
 
 		try {
 			Long issued = Long.valueOf(System.currentTimeMillis() / 1000L);
@@ -563,7 +568,9 @@ public class LTI13Servlet extends HttpServlet {
 			os.close();
 
 		} catch (Exception e) {
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error in post verify request", e);
+			LTI13Util.return400(response, "Post verify request failed");
+			return;
 		}
 	}
 
@@ -594,14 +601,14 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		// TODO: A little moar checking on the session.
-		Map<String, Object> tool = ltiService.getToolDao(tool_key, null, true);
+		org.sakaiproject.lti.beans.LtiToolBean tool = ltiService.getToolDaoAsBean(tool_key, null, true);
 		if (tool == null) {
 			LTI13Util.return400(response, "Could not load tool");
 			log.error("Could not load tool {}", tool_key);
 			return;
 		}
 
-		String json_out = (String) tool.get(LTIService.LTI13_AUTO_REGISTRATION);
+		String json_out = tool.lti13AutoRegistration;
 		if ( json_out == null || json_out.length() < 1 ) {
 			LTI13Util.return400(response, "Could not load tool configuration");
 			log.error("Could not load tool configuration {}", tool_key);
@@ -613,11 +620,10 @@ public class LTI13Servlet extends HttpServlet {
 			PrintWriter out = response.getWriter();
 			out.print(json_out);
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error in get registration request", e);
+			LTI13Util.return400(response, "Get registration request failed");
 			return;
 		}
-
 	}
 
 	// Provide LTI Advantage Sakai parameters through JSON
@@ -668,8 +674,8 @@ public class LTI13Servlet extends HttpServlet {
 			PrintWriter out = response.getWriter();
 			out.print(JacksonUtil.prettyPrint(context_obj));
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error in sakai config request", e);
+			LTI13Util.return400(response, "Sakai config request failed");
 			return;
 		}
 	}
@@ -765,8 +771,8 @@ public class LTI13Servlet extends HttpServlet {
 			PrintWriter out = response.getWriter();
 			out.print(JacksonUtil.prettyPrint(pc));
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error in platform configuration request", e);
+			LTI13Util.return400(response, "Platform configuration request failed");
 			return;
 		}
 	}
@@ -790,16 +796,16 @@ public class LTI13Servlet extends HttpServlet {
 		try {
 			out = response.getWriter();
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error getting response writer for key set request", e);
+			LTI13Util.return400(response, "Key set request failed");
 			return;
 		}
 
 		try {
 			out.println(keySetJSON);
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+			log.error("Error writing key set response", e);
+			LTI13Util.return400(response, "Key set response failed");
 			return;
 		}
 
@@ -861,7 +867,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		// Load the tool
-		Map<String, Object> tool = ltiService.getToolDao(toolKey, null, true);
+		org.sakaiproject.lti.beans.LtiToolBean tool = ltiService.getToolDaoAsBean(toolKey, null, true);
 		if (tool == null) {
 			LTI13Util.return400(response, "Could not load tool");
 			log.error("Could not load tool {}", tool_id);
@@ -873,7 +879,8 @@ public class LTI13Servlet extends HttpServlet {
 		try {
 			publicKey = SakaiLTIUtil.getPublicKey(tool, client_assertion);
 		} catch (Exception e) {
-			LTI13Util.return400(response, e.getMessage());
+			log.error("Error getting public key", e);
+			LTI13Util.return400(response, "Public key retrieval failed");
 			return;
 		}
 
@@ -887,9 +894,6 @@ public class LTI13Servlet extends HttpServlet {
 
 		scope = scope.toLowerCase();
 
-		int allowOutcomes = LTIUtil.toInt(tool.get(LTIService.LTI_ALLOWOUTCOMES));
-		int allowRoster = LTIUtil.toInt(tool.get(LTIService.LTI_ALLOWROSTER));
-		int allowLineItems = LTIUtil.toInt(tool.get(LTIService.LTI_ALLOWLINEITEMS));
 
 		SakaiAccessToken sat = new SakaiAccessToken();
 		sat.tool_id = toolKey;
@@ -901,7 +905,7 @@ public class LTI13Servlet extends HttpServlet {
 
 		// Work through requested scopes
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_LINEITEM_READONLY)) {
-			if (allowLineItems != 1) {
+			if (!Boolean.TRUE.equals(tool.allowlineitems)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_LINEITEM_READONLY);
 				log.error("Scope lineitem readonly not allowed {}", tool_id);
 				return;
@@ -911,7 +915,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_LINEITEM)) {
-			if (allowLineItems != 1) {
+			if (!Boolean.TRUE.equals(tool.allowlineitems)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_LINEITEM);
 				log.error("Scope lineitem not allowed {}", tool_id);
 				return;
@@ -923,7 +927,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_SCORE)) {
-			if (allowOutcomes != 1 || allowLineItems != 1) {
+			if (!Boolean.TRUE.equals(tool.allowoutcomes) || !Boolean.TRUE.equals(tool.allowlineitems)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_SCORE);
 				log.error("Scope score not allowed {}", tool_id);
 				return;
@@ -934,7 +938,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_RESULT_READONLY)) {
-			if (allowOutcomes != 1 || allowLineItems != 1) {
+			if (!Boolean.TRUE.equals(tool.allowoutcomes) || !Boolean.TRUE.equals(tool.allowlineitems)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_RESULT_READONLY);
 				log.error("Scope result readonly not allowed {}", tool_id);
 				return;
@@ -945,7 +949,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_NAMES_AND_ROLES)) {
-			if (allowRoster != 1) {
+			if (!Boolean.TRUE.equals(tool.allowroster)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_NAMES_AND_ROLES);
 				log.error("Scope names and roles not allowed {}", tool_id);
 				return;
@@ -956,7 +960,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		if (scope.contains(LTI13ConstantsUtil.SCOPE_CONTEXTGROUP_READONLY)) {
-			if (allowRoster != 1) {
+			if (!Boolean.TRUE.equals(tool.allowroster)) {
 				LTI13Util.return400(response, "invalid_scope", LTI13ConstantsUtil.SCOPE_CONTEXTGROUP_READONLY);
 				log.error("Scope context group not allowed {}", tool_id);
 				return;
@@ -981,8 +985,9 @@ public class LTI13Servlet extends HttpServlet {
 			out.println(atsp);
 			log.debug("Returning Token\n{}", atsp);
 		} catch (IOException e) {
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-			log.error(e.getMessage(), e);
+			log.error("Error in token post request", e);
+			LTI13Util.return400(response, "Token post request failed");
+			return;
 		}
 	}
 
@@ -1042,8 +1047,8 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
-		Map<String, Object> content = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
+		org.sakaiproject.lti.beans.LtiContentBean content = null;
 		String assignment_name = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
@@ -1058,19 +1063,19 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 
-			assignment_name = (String) content.get(LTIService.LTI_TITLE);
+			assignment_name = (String) content.title;
 			if (assignment_name == null || assignment_name.length() < 1) {
-				log.error("Could not determine assignment_name title {}", content.get(LTIService.LTI_ID));
+				log.error("Could not determine assignment_name title {}", content.id);
 				LTI13Util.return400(response, "Could not determine assignment_name");
 				return;
 			}
@@ -1090,15 +1095,25 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
+		}
+
+		if (log.isDebugEnabled()) {
+			log.debug("tool={} content={} userId={}",
+					tool != null ? tool.getId() : null,
+					content != null ? content.getId() : null,
+					userId);
 		}
 
 		userId = SakaiLTIUtil.parseSubject(userId);
@@ -1108,11 +1123,18 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
+		if (rejectIfLineItemReadOnly(tool, site.getId(), sat.tool_id, lineitem_key, response)) {
+			return;
+		}
+
 		// TODO: Check if sat and tool match
 
 		// When lineitem_key is null we are the "default" lineitem associated with the content object
 		// if the content item is associated with an assignment, we talk to the assignment API,
 		// if the content item is not associated with an assignment, we talk to the gradebook API
+		if (log.isDebugEnabled()) {
+			log.debug("calling SakaiLTIUtil.handleGradebookLTI13 bean version content={}", content);
+		}
 		Object retval = SakaiLTIUtil.handleGradebookLTI13(site, sat.tool_id, content, userId, lineitem_key, scoreObj);
 		log.debug("handleGradebookLTI13 retval={}",retval);
 		if ( retval instanceof String ) {
@@ -1200,7 +1222,7 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		Map<String, Object> tool = ltiService.getToolDao(tool_key, null, true);
+		org.sakaiproject.lti.beans.LtiToolBean tool = ltiService.getToolDaoAsBean(tool_key, null, true);
 		if (tool == null) {
 			log.error("Could not load tool={}", tool_key);
 			LTI13Util.return400(response, "Missing tool");
@@ -1208,7 +1230,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		// Check if the one time use token matching
-		String tool_token = (String) tool.get(LTIService.LTI13_AUTO_TOKEN);
+		String tool_token = tool.lti13AutoToken;
 		if ( tool_token == null || tool_token.length() < 1 ||
 			! tool_token.equals(registration_token) ) {
 			log.error("Bad registration_token");
@@ -1224,7 +1246,7 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		String client_id = (String) tool.get(LTIService.LTI13_CLIENT_ID);
+		String client_id = tool.lti13ClientId;
 
 		jso.put("client_id", client_id);
 
@@ -1232,14 +1254,15 @@ public class LTI13Servlet extends HttpServlet {
 		Object toolConfigurationObj = jso.get("https://purl.imsglobal.org/spec/lti-tool-configuration");
 		if ( toolConfigurationObj instanceof JSONObject ) {
 			JSONObject toolConfiguration = (JSONObject) toolConfigurationObj;
-			String deployment_id = SakaiLTIUtil.getDeploymentId(null);
-			toolConfiguration.put("deployment_id", deployment_id);
+			// No site context during dynamic registration; resolve from the tool record.
+			String deployment_id = SakaiLTIUtil.getToolDeploymentId(null, tool.asMap());
+			toolConfiguration.put(LTIService.LTI_DEPLOYMENT_ID, deployment_id);
 		}
 
 		String json_out = null;
 		try {
 			json_out = JacksonUtil.prettyPrint(jso);
-			tool.put(LTIService.LTI13_AUTO_REGISTRATION, json_out);
+			tool.lti13AutoRegistration = json_out;
 		} catch (com.fasterxml.jackson.core.JsonProcessingException e) {
 			log.error("Could not serialize JSON={}", e.getMessage());
 			LTI13Util.return400(response, "Could not serialize JSON");
@@ -1248,8 +1271,8 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		// Store the JSON
-		tool.put(LTIService.LTI13_AUTO_TOKEN, "Used");
-		tool.put(LTIService.LTI13_AUTO_STATE, new Integer(2));
+		tool.lti13AutoToken = "Used";
+		tool.lti13AutoState = Integer.valueOf(2);
 		String siteId = null;
 		Object retval = ltiService.updateToolDao(tool_key, tool, siteId);
 
@@ -1265,8 +1288,9 @@ public class LTI13Servlet extends HttpServlet {
 			out.println(json_out);
 			log.debug("Returning ToolConfiguration\n{}", json_out);
 		} catch (IOException e) {
-			response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-			log.error(e.getMessage(), e);
+			log.error("Error in registration endpoint post request", e);
+			LTI13Util.return400(response, "Registration endpoint post request failed");
+			return;
 		}
 
 	}
@@ -1335,11 +1359,11 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
-			Map<String, Object> content = loadContentCheckSignature(signed_placement, response);
+			org.sakaiproject.lti.beans.LtiContentBean content = loadContentCheckSignature(signed_placement, response);
 			if (content == null) {
 				LTI13Util.return400(response, "Could not load content from signed placement");
 				log.error("Could not load content from signed placement = {}", signed_placement);
@@ -1349,13 +1373,13 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -1367,14 +1391,17 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
 		}
 
@@ -1382,12 +1409,10 @@ public class LTI13Servlet extends HttpServlet {
 		int paging = NumberUtils.toInt(pagingstr, -1);
 		if ( paging > 0 && ( limit < 0 || limit > paging ) ) limit = paging;
 
-		int releaseName = LTIUtil.toInt(tool.get(LTIService.LTI_SENDNAME));
-		int releaseEmail = LTIUtil.toInt(tool.get(LTIService.LTI_SENDEMAILADDR));
 		// int allowOutcomes = LTIUtil.toInt(tool.get(LTIService.LTI_ALLOWOUTCOMES));
 
 		/* SAK-47261 - Scope NRPS to Context, not Resource Link
-		String assignment_name = (String) content.get(LTIService.LTI_TITLE);
+		String assignment_name = (String) content.title;
 		if (assignment_name == null || assignment_name.length() < 1) {
 			assignment_name = null;
 		}
@@ -1415,7 +1440,7 @@ public class LTI13Servlet extends HttpServlet {
 
 			List<User> users = UserDirectoryService.getUsers(userIds);
 
-			String roleMapProp = (String) tool.get(LTIService.LTI_ROLEMAP);
+			String roleMapProp = tool.rolemap;
 			Map<String, String> toolRoleMap = SakaiLTIUtil.convertOutboundRoleMapPropToMap(roleMapProp);
 
 			// Hoist these out of the loop
@@ -1425,6 +1450,7 @@ public class LTI13Servlet extends HttpServlet {
 			Map<String, String> defaultRoleMap = SakaiLTIUtil.convertOutboundRoleMapPropToMap(
 				SakaiLTIUtil.LTI_OUTBOUND_ROLE_MAP_DEFAULT
 			);
+			log.debug("toolRoleMap={}; propRoleMap={}; defaultRoleMap={}", toolRoleMap, propRoleMap, defaultRoleMap);
 
 			Map<String, String> propLegacyMap = SakaiLTIUtil.convertLegacyRoleMapPropToMap(
 				ServerConfigurationService.getString(SakaiLTIUtil.LTI_LEGACY_ROLE_MAP)
@@ -1468,16 +1494,16 @@ public class LTI13Servlet extends HttpServlet {
 				jo.put("status", "Active");
 				String lti11_legacy_user_id = user.getId();
 				jo.put("lti11_legacy_user_id", lti11_legacy_user_id);
-				String subject = SakaiLTIUtil.getSubject(lti11_legacy_user_id, site.getId());
+				String subject = SakaiLTIUtil.getSubject(lti11_legacy_user_id);
 				jo.put("user_id", subject);   // TODO: Should be subject - LTI13 Quirk
 				jo.put("lis_person_sourcedid", user.getEid());
 
-				if (releaseName != 0) {
+				if (Boolean.TRUE.equals(tool.sendname)) {
 					jo.put("name", user.getDisplayName());
 					jo.put("given_name", user.getFirstName());
 					jo.put("family_name", user.getLastName());
 				}
-				if (releaseEmail != 0) {
+				if (Boolean.TRUE.equals(tool.sendemailaddr)) {
 					jo.put("email", user.getEmail());
 				}
 
@@ -1495,7 +1521,12 @@ public class LTI13Servlet extends HttpServlet {
 
 				JSONArray roles = new JSONArray();
 				if ( StringUtils.isNotBlank(outboundRole) ) {
-					roles.add(outboundRole);
+					for (String roleValue : StringUtils.split(outboundRole, ",")) {
+					    String trimmed = StringUtils.trim(roleValue);
+					    if (StringUtils.isNotBlank(trimmed)) {
+						roles.add(trimmed);
+					    }
+					}
 				} else if (ComponentManager.get(AuthzGroupService.class).isAllowed(ims_user_id, SiteService.SECURE_UPDATE_SITE, "/site/" + site.getId())) {
 					roles.add(LTI13ConstantsUtil.ROLE_INSTRUCTOR);
 				} else {
@@ -1508,7 +1539,7 @@ public class LTI13Servlet extends HttpServlet {
 
 				/* SAK-47261 - Scope NRPS to Context, not Resource Link
 				if ( sat.hasScope(SakaiAccessToken.SCOPE_SCORE)  && assignment_name != null ) {
-					String placement_secret  = (String) content.get(LTIService.LTI_PLACEMENTSECRET);
+					String placement_secret  = (String) content.placementSecret;
 					String placement_id = getPlacementId(signed_placement);
 					String result_sourcedid = SakaiLTIUtil.getSourceDID(user, placement_id, placement_secret);
 					if ( result_sourcedid != null ) sakai_ext.put("lis_result_sourcedid",result_sourcedid);
@@ -1551,6 +1582,9 @@ public class LTI13Servlet extends HttpServlet {
 						String currentUrl = getOurServerUrl() + LTI13_PATH + "namesandroles/" + signed_placement;
 						out.println(" \"id\" : "+JacksonUtil.toString(currentUrl)+",");
 						out.println(" \"context\" : ");
+						if (log.isDebugEnabled()) {
+						    log.debug("context_obj={}", JacksonUtil.prettyPrint(context_obj));
+						}
 						out.print(JacksonUtil.prettyPrint(context_obj));
 						out.println(",");
 						out.println(" \"members\": [");
@@ -1558,6 +1592,9 @@ public class LTI13Servlet extends HttpServlet {
 						out.println(",");
 				}
 
+				if (log.isDebugEnabled()) {
+				    log.debug("jo={}", JacksonUtil.prettyPrint(jo));
+				}
 				out.print(JacksonUtil.prettyPrint(jo));
 				current++;
 
@@ -1599,7 +1636,7 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
 
 		try {
 			site = SiteService.getSite(site_id);
@@ -1609,7 +1646,7 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		tool = ltiService.getToolDao(sat.tool_id, site.getId());
+		tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 		if (tool == null) {
 			log.error("Could not load tool={}", sat.tool_id);
 			LTI13Util.return400(response, "Missing tool");
@@ -1617,7 +1654,10 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		// Don't let a tool access groups unless it is placed *somewhere* in this site
-		if ( ! checkToolHasPlacements(sat.tool_id, site_id, response) ) return;
+		if ( ! checkToolHasPlacements(sat.tool_id, site_id, response) ) {
+			// checkToolHasPlacements() already logs and writes the 403 response.
+			return;
+		}
 
 		String pagingstr = (String) site.getProperties().get(PLUS_NRPS_PAGING);
 		int paging = NumberUtils.toInt(pagingstr, -1);
@@ -1801,7 +1841,7 @@ public class LTI13Servlet extends HttpServlet {
 		return parts.length == 3 ? parts[1] : null;
 	}
 
-	protected static Map<String, Object> loadContentCheckSignature(String signed_placement, HttpServletResponse response) {
+	protected static org.sakaiproject.lti.beans.LtiContentBean loadContentCheckSignature(String signed_placement, HttpServletResponse response) {
 
 		String[] parts = splitSignedPlacement(signed_placement, response);
 		if (parts == null) {
@@ -1823,14 +1863,14 @@ public class LTI13Servlet extends HttpServlet {
 
 		// Note that all of the above checking requires no database access :)
 		// Now we have a valid access token and valid JSON, proceed with validating the signed_placement
-		Map<String, Object> content = ltiService.getContentDao(contentKey);
+		org.sakaiproject.lti.beans.LtiContentBean content = ltiService.getContentAsBean(contentKey, context_id);
 		if (content == null) {
 			log.error("Could not load Content Item {}", contentKey);
 			LTI13Util.return400(response, "Could not load Content Item");
 			return null;
 		}
 
-		String placementSecret = (String) content.get(LTIService.LTI_PLACEMENTSECRET);
+		String placementSecret = content.placementsecret;
 		if (placementSecret == null) {
 			log.error("Could not load placementsecret {}", contentKey);
 			LTI13Util.return400(response, "Could not load placementsecret");
@@ -1850,7 +1890,7 @@ public class LTI13Servlet extends HttpServlet {
 		return content;
 	}
 
-	protected Site loadSiteFromContent(Map<String, Object> content, String signed_placement, HttpServletResponse response) {
+	protected Site loadSiteFromContent(org.sakaiproject.lti.beans.LtiContentBean content, String signed_placement, HttpServletResponse response) {
 		String[] parts = splitSignedPlacement(signed_placement, response);
 		if (parts == null) {
 			return null;
@@ -1859,15 +1899,15 @@ public class LTI13Servlet extends HttpServlet {
 		String context_id = parts[1];
 
 		// Good signed_placement, lets load the site and tool
-		String siteId = (String) content.get(LTIService.LTI_SITE_ID);
+		String siteId = content.siteId;
 		if (siteId == null) {
-			log.error("Could not find site content={}", content.get(LTIService.LTI_ID));
+			log.error("Could not find site content={}", content.id);
 			LTI13Util.return400(response, "Could not find site for content");
 			return null;
 		}
 
 		if (!siteId.equals(context_id)) {
-			log.error("Found incorrect site for content={}", content.get(LTIService.LTI_ID));
+			log.error("Found incorrect site for content={}", content.id);
 			LTI13Util.return400(response, "Found incorrect site for content");
 			return null;
 		}
@@ -1901,24 +1941,54 @@ public class LTI13Servlet extends HttpServlet {
 
 	protected static boolean checkToolHasPlacements(Long toolKey, String siteId, HttpServletResponse response)
 	{
-		 List<Map<String, Object>> contents = ltiService.getContentsDao(null, null, 0, 2, siteId);
-		if (contents.size() < 1) {
-			log.error("Tool id={} has no placements in site={}", toolKey, siteId);
-			LTI13Util.return400(response, "No placements for tool");
+		String search = "lti_content.tool_id = " + toolKey;
+		List<org.sakaiproject.lti.beans.LtiContentBean> contents =
+			ltiService.getContentsAsBeans(search, null, 0, 1, siteId);
+
+		if (contents.isEmpty()) {
+			log.warn("Tool id={} has no placements in site={}", toolKey, siteId);
+			LTI13Util.return403(response, "Tool not placed in site");
 			return false;
 		}
 		return true;
 	}
 
-	protected Map<String, Object> loadToolForContent(Map<String, Object> content, Site site, Long expected_tool_id, HttpServletResponse response) {
-		Long toolKey = LTIUtil.toLongKey(content.get(LTIService.LTI_TOOL_ID));
+	private static boolean isGradebookReadonlyView(org.sakaiproject.lti.beans.LtiToolBean tool) {
+		return LineItemUtil.isGradebookReadonlyView(
+				tool != null ? tool.allowgradebookreadonly : null,
+				tool != null ? tool.allowlineitems : null);
+	}
+
+	/**
+	 * @return true if the response was written (caller should return)
+	 */
+	private static boolean rejectIfLineItemReadOnly(org.sakaiproject.lti.beans.LtiToolBean tool, String contextId,
+			Long toolId, Long lineitemKey, HttpServletResponse response) {
+		if (!isGradebookReadonlyView(tool) || lineitemKey == null) {
+			return false;
+		}
+		Assignment column = LineItemUtil.getColumnByIdDAO(contextId, lineitemKey);
+		if (column == null) {
+			return false;
+		}
+		Map<String, String> assignmentRefToToolKey = LineItemUtil.getExternalIdsForToolAssignments(contextId);
+		if (!LineItemUtil.isColumnWritableByTool(contextId, column, toolId, true, assignmentRefToToolKey)) {
+			LTI13Util.return403(response, "Line item is read-only");
+			log.warn("Rejecting write to read-only line item column_id={} tool_id={}", lineitemKey, toolId);
+			return true;
+		}
+		return false;
+	}
+
+	protected org.sakaiproject.lti.beans.LtiToolBean loadToolForContent(org.sakaiproject.lti.beans.LtiContentBean content, Site site, Long expected_tool_id, HttpServletResponse response) {
+		Long toolKey = LTIUtil.toLongKey(content.toolId);
 		if (toolKey < 0 || !toolKey.equals(expected_tool_id)) {
-			log.error("Content / Tool invalid content={} tool={}", content.get(LTIService.LTI_ID), toolKey);
+			log.error("Content / Tool invalid content={} tool={}", content.id, toolKey);
 			LTI13Util.return400(response, "Content / Tool mismatch");
 			return null;
 		}
 
-		Map<String, Object> tool = ltiService.getToolDao(toolKey, site.getId());
+		org.sakaiproject.lti.beans.LtiToolBean tool = ltiService.getToolDaoAsBean(toolKey, site.getId(), true);
 		if (tool == null) {
 			log.error("Could not load tool={}", toolKey);
 			LTI13Util.return400(response, "Missing tool");
@@ -2024,11 +2094,11 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
-			Map<String, Object> content = loadContentCheckSignature(signed_placement, response);
+			org.sakaiproject.lti.beans.LtiContentBean content = loadContentCheckSignature(signed_placement, response);
 			if (content == null) {
 				LTI13Util.return400(response, "Could not load content from signed placement");
 				log.error("Could not load content from signed placement = {}", signed_placement);
@@ -2038,13 +2108,13 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -2056,14 +2126,17 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
 		}
 
@@ -2124,11 +2197,11 @@ public class LTI13Servlet extends HttpServlet {
 		if ( item == null ) return; // Error alredy handled
 
 		Site site = null;
-		Map<String, Object> tool = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
-			Map<String, Object> content = loadContentCheckSignature(signed_placement, response);
+			org.sakaiproject.lti.beans.LtiContentBean content = loadContentCheckSignature(signed_placement, response);
 			if (content == null) {
 				LTI13Util.return400(response, "Could not load content from signed placement");
 				log.error("Could not load content from signed placement = {}", signed_placement);
@@ -2138,13 +2211,13 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -2156,34 +2229,67 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
+		}
+
+		if (rejectIfLineItemReadOnly(tool, site.getId(), sat.tool_id, lineitem_key, response)) {
+			return;
 		}
 
 		Assignment retval;
 		try {
+			if (log.isDebugEnabled()) {
+				log.debug("Updating site={} tool_id={} column_id={} lineItem={}", site.getId(), sat.tool_id, lineitem_key,
+						JacksonUtil.prettyPrint(item));
+			}
 			retval = LineItemUtil.updateLineItem(site, sat.tool_id, lineitem_key, item);
-		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-			LTI13Util.return400(response, "Could not update lineitem: "+e.getMessage());
+			if (retval == null) {
+				log.error("Could not update lineitem, column not found or not owned by tool. site={} tool_id={} column_id={}",
+					site.getId(), sat.tool_id, lineitem_key);
+				LTI13Util.return404(response, "Could not load column");
+				return;
+			}
+			if (log.isDebugEnabled()) {
+				log.debug("Updated retval={}", JacksonUtil.prettyPrint(retval));
+			}
+		} catch (PermissionException e) {
+			log.warn("Permission denied updating line item", e);
+			LTI13Util.return403(response, "Permission denied updating lineitem");
+			return;
+		} catch (RuntimeException e) {
+			log.error("Could not update lineitem", e);
+			LTI13Util.return400(response, "Could not update lineitem");
 			return;
 		}
 
-		// Add the link to this lineitem
-		item.id = getOurServerUrl() + LTI13_PATH + "lineitems/" + signed_placement + "/" + retval.getId();
+		// Return the line item as we would list it (assignment-backed fields from Assignments when applicable)
+		SakaiLineItem responseItem = LineItemUtil.getLineItemForToolColumn(signed_placement, site.getId(), sat.tool_id, retval);
+		if (responseItem == null) {
+			log.error("getLineItemForToolColumn returned null after updateLineItem; site={} tool_id={} column_id={}",
+					site.getId(), sat.tool_id, lineitem_key);
+			LTI13Util.return400(response, "Could not build line item response");
+			return;
+		}
+		responseItem.id = getOurServerUrl() + LTI13_PATH + "lineitems/" + signed_placement + "/" + retval.getId();
 
-		log.debug("Lineitem item={}",item);
+		if (log.isDebugEnabled()) {
+			log.debug("Lineitem responseItem={}", JacksonUtil.prettyPrint(responseItem));
+		}
 		response.setContentType(SakaiLineItem.CONTENT_TYPE);
 
 		PrintWriter out = response.getWriter();
-		out.print(JacksonUtil.prettyPrint(item));
+		out.print(JacksonUtil.prettyPrint(responseItem));
 	}
 
 	/**
@@ -2212,8 +2318,8 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
-		Map<String, Object> content = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
+		org.sakaiproject.lti.beans.LtiContentBean content = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
@@ -2227,13 +2333,13 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -2245,14 +2351,17 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
 		}
 
@@ -2261,7 +2370,9 @@ public class LTI13Servlet extends HttpServlet {
 			if ( content != null ) {
 				response.setContentType(SakaiLineItem.CONTENT_TYPE);
 				SakaiLineItem item = LineItemUtil.getDefaultLineItem(site, content);
-				log.debug("single line item = {}", JacksonUtil.prettyPrint(item));
+				if (log.isDebugEnabled()) {
+					log.debug("single line item = {}", JacksonUtil.prettyPrint(item));
+				}
 				PrintWriter out = response.getWriter();
 				out.print(JacksonUtil.prettyPrint(item));
 				return;
@@ -2271,9 +2382,13 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		// Find the line items created for this tool
-		log.debug("filter={}", JacksonUtil.prettyPrint(filter));
-		List<SakaiLineItem> toolItems = LineItemUtil.getLineItemsForTool(signed_placement, site, sat.tool_id, filter);
+		// Find the line items created for this tool (or entire gradebook when configured)
+		if (log.isDebugEnabled()) {
+			log.debug("filter={}", JacksonUtil.prettyPrint(filter));
+		}
+		boolean gradebookReadonlyView = isGradebookReadonlyView(tool);
+		List<SakaiLineItem> toolItems = LineItemUtil.getLineItemsForTool(signed_placement, site, sat.tool_id, filter,
+				gradebookReadonlyView);
 
 		response.setContentType(SakaiLineItem.CONTENT_TYPE_CONTAINER);
 		PrintWriter out = response.getWriter();
@@ -2283,7 +2398,9 @@ public class LTI13Servlet extends HttpServlet {
 		for (SakaiLineItem item : toolItems) {
 			out.println(first ? "" : ",");
 			first = false;
-			log.debug("line item = {}", JacksonUtil.prettyPrint(item));
+			if (log.isDebugEnabled()) {
+				log.debug("line item = {}", JacksonUtil.prettyPrint(item));
+			}
 			out.print(JacksonUtil.prettyPrint(item));
 		}
 		out.println("");
@@ -2328,8 +2445,8 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
-		Map<String, Object> content = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
+		org.sakaiproject.lti.beans.LtiContentBean content = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
@@ -2343,13 +2460,13 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -2361,24 +2478,28 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
 		}
 
 		String context_id = site.getId();
+		boolean gradebookReadonlyView = isGradebookReadonlyView(tool);
 		Assignment a = null;
 
 		if ( lineitem_key != null ) {
-			a = LineItemUtil.getColumnByKeyDAO(context_id, sat.tool_id, lineitem_key);
+			a = LineItemUtil.getColumnForToolReadDAO(context_id, sat.tool_id, lineitem_key, gradebookReadonlyView);
 		} else if ( content != null ) {
-			String assignment_label = (String) content.get(LTIService.LTI_TITLE);
+			String assignment_label = (String) content.title;
 			a = LineItemUtil.getColumnByLabelDAO(context_id, sat.tool_id, assignment_label);
 		}
 
@@ -2388,9 +2509,16 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		// Return the line item metadata
+		// Return the line item metadata (same source as list: assignment-backed fields from Assignments when applicable)
 		if ( ! results ) {
-			SakaiLineItem item = LineItemUtil.getLineItem(signed_placement, a);
+			SakaiLineItem item = LineItemUtil.getLineItemForToolColumn(signed_placement, context_id, sat.tool_id, a,
+					gradebookReadonlyView);
+			if (item == null) {
+				LTI13Util.return404(response, "Line item not exposed for this tool");
+				log.error("Line item not exposed for this tool; column_id={} context_id={} tool_id={}",
+						lineitem_key, context_id, sat.tool_id);
+				return;
+			}
 
 			String json_out = JacksonUtil.prettyPrint(item);
 			log.debug("Returning {}", json_out);
@@ -2401,25 +2529,32 @@ public class LTI13Servlet extends HttpServlet {
 			return;
 		}
 
-		resultsForAssignment(signed_placement, site, a, lineitem_key, user_id, request, response);
+		String filterUserId = resolveResultsFilterUserId(user_id, request);
+		resultsForAssignment(signed_placement, site, a, lineitem_key, filterUserId, request, response);
 
+	}
+
+	/**
+	 * Resolve a single-user filter for AGS Result GET. Accepts the IMS AGS 2.0 query
+	 * parameter {@code user_id} (LTI subject or bare user id) and the legacy path segment
+	 * from {@code …/results/{user_id}} or from a result {@code id} URL.
+	 */
+	private String resolveResultsFilterUserId(String pathUserId, HttpServletRequest request) {
+		String filter = pathUserId;
+		if (StringUtils.isEmpty(filter)) {
+			filter = request.getParameter("user_id");
+		}
+		if (StringUtils.isEmpty(filter)) {
+			return null;
+		}
+		return SakaiLTIUtil.parseSubject(filter);
 	}
 
 	private void resultsForAssignment(String signed_placement, Site site, Assignment a,
 			Long lineitem_key, String user_id, HttpServletRequest request, HttpServletResponse response)
 	{
 		log.debug("signed_placement={} user_id={}", signed_placement, user_id);
-		// TODO: Is the outer container an array or an object - the spec and swagger doc disagree
-		/*
-			[{
-			  "id": "https://lms.example.com/context/2923/lineitems/1/results/5323497",
-			  "scoreOf": "https://lms.example.com/context/2923/lineitems/1",
-			  "userId": "5323497",
-			  "resultScore": 0.83,
-			  "resultMaximum": 1,
-			  "comment": "This is exceptional work."
-			}]
-		*/
+		// AGS 2.0: results collection is always a JSON array (at most one element when filtered by user).
 		response.setContentType(Result.CONTENT_TYPE_CONTAINER);
 
 		// Look up the assignment so we can find the max points
@@ -2461,11 +2596,11 @@ public class LTI13Servlet extends HttpServlet {
 			response.setContentType(APPLICATION_JSON);
 			PrintWriter out = response.getWriter();
 
-			if ( user_id == null ) out.println("[");
+			out.println("[");
 			for (User user : users) {
 				Result result = new Result();
                                 String lti11_legacy_user_id = user.getId();
-                                String subject = SakaiLTIUtil.getSubject(lti11_legacy_user_id, context_id);
+                                String subject = SakaiLTIUtil.getSubject(lti11_legacy_user_id);
 				result.userId = subject;
 				result.resultMaximum = a.getPoints();
 
@@ -2500,7 +2635,7 @@ public class LTI13Servlet extends HttpServlet {
 
 				if ( actualGrade != null ) {
 					try {
-						Double dGrade = new Double(actualGrade);
+						Double dGrade = Double.valueOf(actualGrade);
 						result.resultScore = dGrade;
 					} catch(NumberFormatException e) {
 						log.error("Could not parse grade="+actualGrade);
@@ -2516,9 +2651,7 @@ public class LTI13Servlet extends HttpServlet {
 				out.print(json_out);
 
 			}
-			if ( user_id == null ) {
-				out.println("]");
-			}
+			out.println("]");
 		} catch (Throwable t) {
 			log.error(t.getMessage(), t);
 		} finally {
@@ -2560,11 +2693,11 @@ public class LTI13Servlet extends HttpServlet {
 		}
 
 		Site site = null;
-		Map<String, Object> tool = null;
+		org.sakaiproject.lti.beans.LtiToolBean tool = null;
 
 		// SAK-47261 - Legacy URL patterns with actual signed placement
 		if ( isSignedPlacement(signed_placement) ) {
-			Map<String, Object> content = loadContentCheckSignature(signed_placement, response);
+			org.sakaiproject.lti.beans.LtiContentBean content = loadContentCheckSignature(signed_placement, response);
 			if (content == null) {
 				LTI13Util.return400(response, "Could not load content from signed placement");
 				log.error("Could not load content from signed placement = {}", signed_placement);
@@ -2574,13 +2707,14 @@ public class LTI13Servlet extends HttpServlet {
 			site = loadSiteFromContent(content, signed_placement, response);
 			if (site == null) {
 				LTI13Util.return400(response, "Could not load site associated with content");
-				log.error("Could not load site associated with content={}", content.get(LTIService.LTI_ID));
+				log.error("Could not load site associated with content={}", content.id);
 				return;
 			}
 
 			tool = loadToolForContent(content, site, sat.tool_id, response);
 			if (tool == null) {
-				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.get(LTIService.LTI_ID));
+				log.error("Could not load tool={} associated with content={}", sat.tool_id, content.id);
+				LTI13Util.return400(response, "Could not load tool associated with content");
 				return;
 			}
 		} else { // SAK-47261 - It is just a site_id
@@ -2592,18 +2726,24 @@ public class LTI13Servlet extends HttpServlet {
 				return;
 			}
 
-			tool = ltiService.getToolDao(sat.tool_id, site.getId());
+			tool = ltiService.getToolDaoAsBean(sat.tool_id, site.getId(), true);
 			if (tool == null) {
 				log.error("Could not load tool={}", sat.tool_id);
 				LTI13Util.return400(response, "Missing tool");
 				return;
 			}
 
-			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) return;
+			if ( ! checkToolHasPlacements(sat.tool_id, signed_placement, response) ) {
+				// checkToolHasPlacements() already logs and writes the 403 response.
+				return;
+			}
 
 		}
 
 		String context_id = site.getId();
+		if (rejectIfLineItemReadOnly(tool, context_id, sat.tool_id, lineitem_key, response)) {
+			return;
+		}
 		if ( LineItemUtil.deleteAssignmentByKeyDAO(context_id, sat.tool_id, lineitem_key) ) {
 			return;
 		}
